--- a/lang/es.json
+++ b/lang/es.json
@@ -494,7 +494,7 @@
     "arm5e.messages.wound.incap": "Incapacitante",
     "arm5e.messages.wound.dead": "Muerto",
     "arm5e.messages.noWound": "No se causó ninguna herida",
-    "arm5e.messages.wound": "Recibió una herida $typeWound$",
+    "arm5e.messages.woundType": "Recibió una herida $typeWound$",
     "arm5e.messages.woundResult": "Recibió una herida $typeWound$",
     "arm5e.sheet.magic.gesturesType.exaggerated": "Vigorosos",
     "arm5e.sheet.magic.gesturesType.bold": "Vehementes",
@@ -509,5 +509,6 @@
     "arm5e.sheet.defaultCharacteristicForAbility": "Característica por defecto para habilidad",
     "arm5e.dialog.damageCalculator": "Calculadora de daño",
     "arm5e.dialog.woundCalculator": "Calculadora de heridas",
-    "arm5e.notification.notPossibleToCalculateWound": "No se puede calcular la herida (comprueba el tamaño de tu actor)"
+    "arm5e.notification.notPossibleToCalculateWound": "No se puede calcular la herida (comprueba el tamaño de tu actor)",
+    "arm5e.notification.onlyOneToken": "Tienes que seleccionar un único token"
 }
